@@ -1,5 +1,6 @@
 Changelog for TagSoup
 
+    Add optRawTag to Render, to ensure script's don't get escaped
 0.12.4
     #487, fix the behaviour of ~== for TagComment and others
 0.12.3
